[package]
name = "smykostopka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
fontdue = "0.7.2"
image = "0.24.2"
imageproc = "0.23.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rayon = "1.5.3"
rusttype = "0.9.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
